# ChatDev

./: .gitignore  pyproject.toml
notebooks/EDA/: langchain.ipynb  openai.ipynb
