[tool.poetry]
name = "chat-project"
version = "0.1.0"
description = ""
authors = ["YuriNakayama <yuri620620@gmail.com>"]
readme = "README.md"
packages = [{include = "ubuntu"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
pandas = "^2.0.0"
jupyter = "^1.0.0"
langchain = "^0.0.147"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
